feat: feat: add slack as new source for cummunity insight
